@@ -27,7 +27,7 @@
 #ifndef SDCCGLUE_H
 #define SDCCGLUE_H 1
 
-void glue ();
+void glue (void);
 /* drdani Jan 30 2000
    This is needed in gen.c of z80 port */
 char *aopLiteral (value *, int);
@@ -38,10 +38,7 @@ extern symbol *interrupts[];
 extern set *publics;
 extern set *tmpfileSet;
 
-#if defined (__MINGW32__) || defined (__CYGWIN__) || defined (_MSC_VER)
 void rm_tmpfiles (void);
-#endif
-
 int 
 pointerTypeToGPByte (const int p_type, const char *iname, const char *oname);
 
